# autospec

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IDEAS.md  LICENSE  README.md  results.tsv  run.py
.githooks/: SETUP.md  pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/: README.md  rust-architecture.md  rust-implementation-setup.md  rust-roadmap.md  rust-v1-spec.md
legacy/: prompt.md
src/: agent.rs  cli.rs  config.rs  diff.rs  docs.rs  error.rs  git.rs  lib.rs  main.rs  output.rs  prompt.rs  state.rs
src/engine/: mod.rs  runner.rs
tests/: integration.rs
tests/fixtures/docs-basic/: product.md
tests/fixtures/docs-ripple/: entity.md  feature.md
tests/fixtures/docs-sweep/: one.md  two.md
tests/support/: fake_agent.py
